[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/Track1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Kart.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/HumanController.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://Scripts/FollowCamera.gd" type="Script" id=5]
[ext_resource path="res://Graphics/Font.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Scenes/AiController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Graphics/tileset_legacy_trans.png" type="Texture" id=8]
[ext_resource path="res://Sounds/Track1Theme.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/RaceStartMusic.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sounds/RaceLoseMusic.ogg" type="AudioStream" id=11]
[ext_resource path="res://Sounds/RaceWinMusic.ogg" type="AudioStream" id=12]
[ext_resource path="res://Graphics/KeyUp.tres" type="Texture" id=13]
[ext_resource path="res://Graphics/KeyRight.tres" type="Texture" id=14]
[ext_resource path="res://Graphics/KeyLeft.tres" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 136, 170, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 136, 408, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 289, 527, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 391, 357, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 8 )
region = Rect2( 289, 374, 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("./.:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.933333, 0.933333, 0.466667, 1 ), Color( 0.866667, 0.533333, 0.333333, 1 ), Color( 0.4, 0.266667, 0, 1 ), Color( 0.866667, 0.533333, 0.333333, 1 ), Color( 0.933333, 0.933333, 0.466667, 1 ) ]
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 85, 374, 16, 16 )

[node name="Game" type="Spatial"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Track" parent="." instance=ExtResource( 1 )]

[node name="Karts" type="Spatial" parent="."]

[node name="Kart1" parent="Karts" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 51.0953, 0, 8.7697 )

[node name="Saucer" parent="Karts/Kart1" index="0"]
modulate = Color( 1, 0.466667, 0.466667, 1 )

[node name="Controller" parent="Karts/Kart1" instance=ExtResource( 7 )]

[node name="Kart2" parent="Karts" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 55.0394, 0, 11.748 )

[node name="Saucer" parent="Karts/Kart2" index="0"]
modulate = Color( 0, 0.533333, 1, 1 )

[node name="Controller" parent="Karts/Kart2" instance=ExtResource( 7 )]

[node name="Kart3" parent="Karts" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 51.0704, 0, 14.8953 )

[node name="Saucer" parent="Karts/Kart3" index="0"]
modulate = Color( 0, 0.8, 0.333333, 1 )

[node name="Controller" parent="Karts/Kart3" instance=ExtResource( 7 )]

[node name="Kart4" parent="Karts" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 54.9673, 0, 17.7507 )

[node name="Saucer" parent="Karts/Kart4" index="0"]
modulate = Color( 0.8, 0.266667, 0.8, 1 )

[node name="Controller" parent="Karts/Kart4" instance=ExtResource( 7 )]

[node name="Kart5" parent="Karts" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50.9811, 0, 20.7517 )

[node name="Saucer" parent="Karts/Kart5" index="0"]
modulate = Color( 0.666667, 1, 0.933333, 1 )

[node name="Controller" parent="Karts/Kart5" instance=ExtResource( 7 )]

[node name="Kart6" parent="Karts" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 55.0114, 0, 23.7367 )

[node name="Saucer" parent="Karts/Kart6" index="0"]
modulate = Color( 0.533333, 0, 0, 1 )

[node name="Controller" parent="Karts/Kart6" instance=ExtResource( 7 )]

[node name="Kart7" parent="Karts" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50.9855, 0, 26.7736 )

[node name="Saucer" parent="Karts/Kart7" index="0"]
modulate = Color( 0.2, 0.2, 0.2, 1 )

[node name="Controller" parent="Karts/Kart7" instance=ExtResource( 7 )]

[node name="Kart8" parent="Karts" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 55, 0, 29.7 )

[node name="Saucer" parent="Karts/Kart8" index="0"]
modulate = Color( 0.933333, 0.933333, 0.466667, 1 )

[node name="Controller" type="Node" parent="Karts/Kart8"]
script = ExtResource( 3 )

[node name="Viewports" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainerTop" type="ViewportContainer" parent="Viewports"]
margin_right = 1024.0
margin_bottom = 447.0
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportTop" type="Viewport" parent="Viewports/ViewportContainerTop"]
size = Vector2( 1024, 447 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true
audio_listener_enable_3d = true

[node name="Camera" type="Camera" parent="Viewports/ViewportContainerTop/ViewportTop"]
transform = Transform( 0.999936, -0.00301202, 0.0108995, 0, 0.963873, 0.266362, -0.011308, -0.266345, 0.963811, 53.5164, 1.55599, 29.0126 )
current = true
far = 120.0
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}
targetNodePath = NodePath("../../../../Karts/Kart8")

[node name="Listener" type="Listener" parent="Viewports/ViewportContainerTop/ViewportTop/Camera"]
current = true

[node name="TitleCamera" type="Camera" parent="Viewports/ViewportContainerTop/ViewportTop"]
transform = Transform( -0.707107, -0.40558, -0.579228, 0, 0.819152, -0.573577, 0.707107, -0.40558, -0.579228, 0, 60.7392, 114.447 )
far = 120.0

[node name="Listener" type="Listener" parent="Viewports/ViewportContainerTop/ViewportTop/TitleCamera"]
current = true

[node name="TitleCameraPosition" type="Spatial" parent="Viewports/ViewportContainerTop/ViewportTop"]
transform = Transform( -0.707107, -0.40558, -0.579228, 0, 0.819152, -0.573577, 0.707107, -0.40558, -0.579228, 0, 60.7392, 114.447 )

[node name="Tween" type="Tween" parent="Viewports/ViewportContainerTop/ViewportTop"]

[node name="ViewportContainerBottom" type="ViewportContainer" parent="Viewports"]
margin_top = 448.0
margin_right = 1024.0
margin_bottom = 896.0
size_flags_vertical = 3
stretch = true

[node name="ViewportBottom" type="Viewport" parent="Viewports/ViewportContainerBottom"]
size = Vector2( 1024, 448 )
handle_input_locally = false
render_target_update_mode = 3

[node name="TopCamera" type="Camera" parent="Viewports/ViewportContainerBottom/ViewportBottom"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.0543633, 90.6568, 0.00218773 )
visible = false

[node name="BirdsEyeCamera" type="Camera" parent="Viewports/ViewportContainerBottom/ViewportBottom"]
transform = Transform( 1, 1.00064e-06, -4.97715e-07, 0, 0.445348, 0.895358, 1.11759e-06, -0.895358, 0.445348, 0, 95, 62 )
current = true
fov = 56.7
far = 150.0

[node name="TitleCamera" type="Camera" parent="Viewports/ViewportContainerBottom/ViewportBottom"]
transform = Transform( 1, 0, 0, 0, 0.810768, -0.585368, 0, 0.585368, 0.810768, 0, 60.7392, 0 )
fov = 56.7
far = 150.0

[node name="TitleCameraPosition" type="Spatial" parent="Viewports/ViewportContainerBottom/ViewportBottom"]
transform = Transform( 1, 0, 0, 0, 0.810768, -0.585368, 0, 0.585368, 0.810768, 0, 60.7392, 0 )

[node name="Tween" type="Tween" parent="Viewports/ViewportContainerBottom/ViewportBottom"]

[node name="Ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="Ui"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Ui/Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 28.0
margin_top = 12.0
margin_right = 182.0
margin_bottom = 89.0
rect_scale = Vector2( 6, 6 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Kosmic
Kart"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PressStart" type="Label" parent="Ui/Title"]
margin_left = 336.0
margin_top = 512.0
margin_right = 512.0
margin_bottom = 528.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Press Start"
align = 2
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AuthorLink" type="LinkButton" parent="Ui/Title"]
margin_left = 800.0
margin_top = 880.0
margin_right = 1024.0
margin_bottom = 896.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
underline = 2

[node name="Author" type="Label" parent="Ui/Title/AuthorLink"]
margin_right = 224.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "puzzud.itch.io"
align = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleToRace" type="Control" parent="Ui"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Controls" type="Control" parent="Ui/TitleToRace"]
visible = false
margin_top = 128.0
margin_right = 512.0
margin_bottom = 144.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveSymbol" type="TextureRect" parent="Ui/TitleToRace/Controls"]
margin_left = 208.0
margin_top = -8.0
margin_right = 224.0
margin_bottom = 8.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MoveLabel" type="Label" parent="Ui/TitleToRace/Controls"]
margin_left = 256.0
margin_top = -8.0
margin_right = 320.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Move"
align = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SteerLeftSymbol" type="TextureRect" parent="Ui/TitleToRace/Controls"]
margin_left = 192.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 32.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SteerRightSymbol" type="TextureRect" parent="Ui/TitleToRace/Controls"]
margin_left = 224.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 32.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SteerLabel" type="Label" parent="Ui/TitleToRace/Controls"]
margin_left = 248.0
margin_top = 16.0
margin_right = 328.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Steer"
align = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CollectGems" type="Label" parent="Ui/TitleToRace"]
visible = false
margin_top = 112.0
margin_right = 512.0
margin_bottom = 128.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Collect Gems For Speed"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberOfLaps" type="Label" parent="Ui/TitleToRace"]
visible = false
margin_top = 112.0
margin_right = 512.0
margin_bottom = 128.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "3 laps"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Label" parent="Ui/TitleToRace"]
visible = false
margin_top = 112.0
margin_right = 512.0
margin_bottom = 128.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Win"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Race" type="Control" parent="Ui"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RaceResultMessage" type="Label" parent="Ui/Race"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 76.0
margin_top = 12.0
margin_right = 284.0
margin_bottom = 56.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemInfo" type="Control" parent="Ui/Race"]
margin_left = 720.0
margin_top = 48.0
margin_right = 800.0
margin_bottom = 128.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Frame" type="TextureRect" parent="Ui/Race/ItemInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Items" type="Control" parent="Ui/Race/ItemInfo"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Shield" type="TextureRect" parent="Ui/Race/ItemInfo/Items"]
visible = false
modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
margin_left = 16.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Missile" type="TextureRect" parent="Ui/Race/ItemInfo/Items"]
visible = false
modulate = Color( 1, 0.466667, 0.466667, 1 )
margin_left = 16.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="SpeedUp" type="TextureRect" parent="Ui/Race/ItemInfo/Items"]
visible = false
modulate = Color( 0.933333, 0.933333, 0.466667, 1 )
margin_left = 16.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
texture = SubResource( 7 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Time" type="Label" parent="Ui/Race"]
margin_left = 720.0
margin_top = 16.0
margin_right = 848.0
margin_bottom = 32.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "00:00:00"
align = 2
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LapInfo" type="Control" parent="Ui/Race"]
margin_left = 816.0
margin_top = 48.0
margin_right = 976.0
margin_bottom = 80.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Ui/Race/LapInfo"]
margin_right = 48.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Lap"
align = 2
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Ui/Race/LapInfo"]
margin_left = 128.0
margin_right = 144.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Order" type="Label" parent="Ui/Race"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 880.0
margin_top = 80.0
margin_right = 896.0
margin_bottom = 96.0
rect_scale = Vector2( 8, 8 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_as_outline = 1
text = "8"
align = 2
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CoinInfo" type="Control" parent="Ui/Race"]
margin_left = 912.0
margin_top = 400.0
margin_right = 1008.0
margin_bottom = 432.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Symbol" type="TextureRect" parent="Ui/Race/CoinInfo"]
modulate = Color( 0.933333, 0.933333, 0.466667, 1 )
margin_right = 32.0
margin_bottom = 32.0
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorAnimationPlayer" type="AnimationPlayer" parent="Ui/Race/CoinInfo/Symbol"]
anims/Idle = SubResource( 2 )

[node name="Count" type="Label" parent="Ui/Race/CoinInfo"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "0"
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PressStart" type="Label" parent="Ui/Race"]
visible = false
margin_left = 336.0
margin_top = 224.0
margin_right = 512.0
margin_bottom = 256.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Try Again?
Press Start"
align = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RacerInfo" type="Control" parent="Ui/Race"]
margin_left = 16.0
margin_top = 464.0
margin_right = 80.0
margin_bottom = 976.0
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="RacerHead1" type="TextureRect" parent="Ui/Race/RacerInfo"]
margin_right = 96.0
margin_bottom = 16.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Ui/Race/RacerInfo/RacerHead1"]
margin_left = 20.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RacerHead2" type="TextureRect" parent="Ui/Race/RacerInfo"]
margin_top = 64.0
margin_right = 96.0
margin_bottom = 80.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Ui/Race/RacerInfo/RacerHead2"]
margin_left = 20.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RacerHead3" type="TextureRect" parent="Ui/Race/RacerInfo"]
margin_top = 128.0
margin_right = 96.0
margin_bottom = 144.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Ui/Race/RacerInfo/RacerHead3"]
margin_left = 20.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RacerHead4" type="TextureRect" parent="Ui/Race/RacerInfo"]
margin_top = 192.0
margin_right = 96.0
margin_bottom = 208.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Ui/Race/RacerInfo/RacerHead4"]
margin_left = 20.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RacerHead5" type="TextureRect" parent="Ui/Race/RacerInfo"]
margin_top = 256.0
margin_right = 96.0
margin_bottom = 272.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Ui/Race/RacerInfo/RacerHead5"]
margin_left = 20.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RacerHead6" type="TextureRect" parent="Ui/Race/RacerInfo"]
margin_top = 320.0
margin_right = 96.0
margin_bottom = 336.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Ui/Race/RacerInfo/RacerHead6"]
margin_left = 20.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RacerHead7" type="TextureRect" parent="Ui/Race/RacerInfo"]
margin_top = 384.0
margin_right = 96.0
margin_bottom = 400.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Ui/Race/RacerInfo/RacerHead7"]
margin_left = 20.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RacerHead8" type="TextureRect" parent="Ui/Race/RacerInfo"]
margin_top = 448.0
margin_right = 96.0
margin_bottom = 464.0
rect_scale = Vector2( 4, 4 )
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Ui/Race/RacerInfo/RacerHead8"]
margin_left = 20.0
margin_top = 4.0
margin_right = 60.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timers" type="Node" parent="."]

[node name="InstructionMessageTimer" type="Timer" parent="Timers"]
wait_time = 4.5
one_shot = true

[node name="AudioPlayers" type="Spatial" parent="."]

[node name="StartRaceMusic" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 10 )

[node name="Track1Theme" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 9 )

[node name="RaceLoseMusic" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 11 )

[node name="RaceWinMusic" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource( 12 )
[connection signal="itemPickedUp" from="Track" to="." method="onTrackItemPickedUp"]
[connection signal="kartCrossedFinishLine" from="Track" to="." method="onTrackKartCrossedFinishLine"]
[connection signal="kartEnteredRoughZone" from="Track" to="." method="onTrackKartEnteredRoughZone"]
[connection signal="kartExitedRoughZone" from="Track" to="." method="onTrackKartExitedRoughZone"]
[connection signal="startSequenceFinished" from="Track" to="." method="onTrackStartSequenceFinished"]
[connection signal="passedWaypoint" from="Karts/Kart1" to="." method="onKartPassedWaypoint"]
[connection signal="usedItem" from="Karts/Kart1" to="." method="onKartUsedItem"]
[connection signal="passedWaypoint" from="Karts/Kart2" to="." method="onKartPassedWaypoint"]
[connection signal="usedItem" from="Karts/Kart2" to="." method="onKartUsedItem"]
[connection signal="passedWaypoint" from="Karts/Kart3" to="." method="onKartPassedWaypoint"]
[connection signal="usedItem" from="Karts/Kart3" to="." method="onKartUsedItem"]
[connection signal="passedWaypoint" from="Karts/Kart4" to="." method="onKartPassedWaypoint"]
[connection signal="usedItem" from="Karts/Kart4" to="." method="onKartUsedItem"]
[connection signal="passedWaypoint" from="Karts/Kart5" to="." method="onKartPassedWaypoint"]
[connection signal="passedWaypoint" from="Karts/Kart6" to="." method="onKartPassedWaypoint"]
[connection signal="usedItem" from="Karts/Kart6" to="." method="onKartUsedItem"]
[connection signal="passedWaypoint" from="Karts/Kart7" to="." method="onKartPassedWaypoint"]
[connection signal="usedItem" from="Karts/Kart7" to="." method="onKartUsedItem"]
[connection signal="passedWaypoint" from="Karts/Kart8" to="." method="onKartPassedWaypoint"]
[connection signal="usedItem" from="Karts/Kart8" to="." method="onKartUsedItem"]
[connection signal="tween_all_completed" from="Viewports/ViewportContainerTop/ViewportTop/Tween" to="." method="onTopCameraTweenCompleted"]
[connection signal="pressed" from="Ui/Title/AuthorLink" to="." method="onAuthorLinkPressed"]
[connection signal="timeout" from="Timers/InstructionMessageTimer" to="." method="onInstructionMessageTimerTimeout"]
[connection signal="finished" from="AudioPlayers/StartRaceMusic" to="." method="onStartRaceMusicFinished"]

[editable path="Karts/Kart1"]

[editable path="Karts/Kart2"]

[editable path="Karts/Kart3"]

[editable path="Karts/Kart4"]

[editable path="Karts/Kart5"]

[editable path="Karts/Kart6"]

[editable path="Karts/Kart7"]

[editable path="Karts/Kart8"]
